# AI-Engineering-Project-Spring-AI-

SpringEcom/: pom.xml
SpringEcom/src/main/java/com/telusko/: SpringEcomApplication.java
SpringEcom/src/main/java/com/telusko/controller/: HelloController.java  OrderController.java  ProductController.java
SpringEcom/src/main/java/com/telusko/model/: Order.java  OrderItem.java  Product.java
SpringEcom/src/main/java/com/telusko/repo/: OrderRepo.java  ProductRepo.java
SpringEcom/src/main/java/com/telusko/service/: OrderService.java  ProductService.java
SpringEcom/src/main/resources/: application.properties
SpringEcom/src/test/java/com/telusko/: SpringEcomApplicationTests.java
SpringEcomAI/: pom.xml
SpringEcomAI-LangChain/: .env.example  README.md  database.py  ecom_ai.db  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
SpringEcomAI-LangChain/config/: vector_store.py
SpringEcomAI-LangChain/routers/: chatbot.py  orders.py  products.py
SpringEcomAI-LangChain/services/: ai_image_service.py  chatbot_service.py  order_service.py  product_service.py
SpringEcomAI/src/main/java/com/telusko/: SpringEcomAiApplication.java
SpringEcomAI/src/main/java/com/telusko/config/: ChatClientConfig.java  VectorStoreConfig.java
SpringEcomAI/src/main/java/com/telusko/controller/: ChatBotController.java  OrderController.java  ProductController.java
SpringEcomAI/src/main/resources/: application.properties
SpringEcomAI/src/test/java/com/telusko/: SpringEcomAiApplicationTests.java
e-com-Frontend/src/components/: Cart.jsx  SearchResults.jsx
(+16 files in other folders)
